--- a/Quantum.School.AngularClient/ClientApp/package.json
+++ b/Quantum.School.AngularClient/ClientApp/package.json
@@ -37,6 +37,7 @@
 		"@angular/cli": "^11.0.3",
 		"@angular/compiler-cli": "^11.0.3",
 		"@angular/language-service": "^11.0.3",
+		"@angular/localize": "^11.0.3",
 		"@types/jasmine": "~3.4.4",
 		"@types/jasminewd2": "~2.0.8",
 		"@types/node": "~12.11.6",
