--- a/Quantum.School.AngularClient/ClientApp/src/tsconfig.app.json
+++ b/Quantum.School.AngularClient/ClientApp/src/tsconfig.app.json
@@ -5,6 +5,11 @@
 		"outDir": "../out-tsc/app",
 		"types": []
 	},
+	"files":
+	[
+		"main.ts",
+		"polyfills.ts"
+	],
 	"exclude":
 	[
 		"src/test.ts",
